This file records the editorial changes you had to make in order for the text to process correctly.
So really it records quotations that you had to close.

Night and Day
line 2234 after "Katharine."
line 3818 after "petticoat"
line 3804 after "but-"